# test_ffi

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/Classes/: method_channel.cpp  native_add.cpp  native_add.h
android/app/src/main/java/com/example/testffi/: Jni.java  MainActivity.java
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: generated_bindings.dart  main.dart  platform.dart
test/: widget_test.dart
